package br.edu.ifpb.pps.pattern.observer;

public interface EventoSistema {
}
